compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__qualified_type_unification_error.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 2355
expression: "\nimport gleam\n\ntype Bool {\n  True\n  False\n}\n\nconst list_of_bools = [True, False, gleam.False]\n"
snapshot_kind: text
---
----- SOURCE CODE

import gleam

type Bool {
  True
  False
}

const list_of_bools = [True, False, gleam.False]


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:9:37
  │
9 │ const list_of_bools = [True, False, gleam.False]
  │                                     ^^^^^^^^^^^

Expected type:

    Bool

Found type:

    gleam.Bool
